--- a/src/app/styles/card.css
+++ b/src/app/styles/card.css
@@ -13,13 +13,23 @@
   padding: 20px 10px;
   border-radius: 8px;
   gap: 10px;
-  cursor: pointer;
 }
 
 .card__info {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
 
 .card__name {
   height: 50px;
+}
+
+.add__btn {
+  border: 2px solid #000;
+  padding: 5px 10px;
+  border-radius: 8px;
 }
