--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -5,6 +5,13 @@
   height: 50px;
 }
 
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .part__logo {
   font-size: 38px;
   color: red;
@@ -12,4 +19,29 @@
 
 .logo {
   text-align: center;
+}
+
+.link {
+  transition: all .3s;
+}
+
+.link:hover {
+  color: red;
+}
+
+.link__pos {
+  position: relative;
+}
+
+.cart__score {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 15px;
+  color: #fff;
+  background-color: red;
+  border-radius: 50%;
+  font-size: 12px;
+  width: 15px;
+  height: 15px;
 }
