--- a/src/app/styles/card.css
+++ b/src/app/styles/card.css
@@ -32,4 +32,14 @@
   border: 2px solid #000;
   padding: 5px 10px;
   border-radius: 8px;
+  transition: all .5s;
+}
+
+.add__btn:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.add__btn:active {
+  color: red;
 }
